--- a/css/style.scss
+++ b/css/style.scss
@@ -75,6 +75,7 @@
     &:hover {
         
   }
+}
   
   body {
     background-color: white;
@@ -143,6 +144,10 @@
     color: white;
     margin-left: 2%;
     line-height: 35%;
+  }
+
+  b {
+    color: #7f344a;
   }
   
     
