--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,17 @@ a:hover {
   text-decoration: underline;
 }
 
+.card {
+  width: 20vw;
+}
+
+.btn btn-primary {
+  width: 5vw;
+}
+
 .me {
-  width: 35%;
-  height: 45%;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   border: 2px solid #b38f00;
 }
 
@@ -140,4 +147,10 @@ footer {
 
 b {
   color: #7f344a;
+}
+
+@media only screen and (max-width: 600px) {
+  .card {
+    min-width: 30vw;
+  }
 }/*# sourceMappingURL=style.css.map */
