--- a/css/style.scss
+++ b/css/style.scss
@@ -122,10 +122,29 @@
     text-decoration: underline;
   }
   
+  .card {
+    width: 20vw;
+  }
+
+ .card-title {
+
+ }
+ 
+  .card-body {
+
+  }
+
+  .card-text {
+
+  }
+
+  .btn btn-primary {
+    width: 5vw;
+  }
+  
   .me {
-    width: 35%;
-    height: 45%;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
     border: 2px solid #b38f00;
   }
   
@@ -148,6 +167,12 @@
 
   b {
     color: #7f344a;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .card {
+      min-width: 30vw;
+    }
   }
   
     
