--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*animations/transitions*/
+/*animations/transitions-------------------------*/
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -10,7 +10,7 @@
     opacity: 1;
   }
 }
-/*Animations/transitions end*/
+/*Animations/transitions end------------------------*/
 .grow {
   transition: all 0.5s ease;
   color: #b38f00;
@@ -70,6 +70,7 @@
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
+
 body {
   background-color: white;
 }
@@ -114,20 +115,6 @@ a:hover {
   text-decoration: underline;
 }
 
-.card {
-  width: 20vw;
-}
-
-.btn btn-primary {
-  width: 5vw;
-}
-
-.me {
-  width: 100%;
-  height: 100%;
-  border: 2px solid #b38f00;
-}
-
 .space {
   height: 500px;
 }
@@ -153,4 +140,14 @@ b {
   .card {
     min-width: 30vw;
   }
+}
+/*About Us Page-------------------------------*/
+.accordion-button {
+  background-color: white;
+}
+
+.me {
+  width: 15%;
+  height: auto;
+  border: 2px solid #b38f00;
 }/*# sourceMappingURL=style.css.map */
