Added dark/light mode toggle.

--- a/css/style.css
+++ b/css/style.css
@@ -25,16 +25,30 @@
   border: 2px solid #b38f00;
   padding: 40px;
   color: white;
+  margin: 1%;
 }
 
 .nav {
-  margin-top: 75px;
-  margin-left: 35%;
+  margin: 5% 30% 0% 30%;
   font-size: 20px;
 }
 
 .search {
-  width: 100%;
+  width: 32.2rem;
+}
+
+.btn {
+  color: #b38f00;
+  height: 3rem;
+}
+
+.btn:hover {
+  background-color: #7c3d4e;
+}
+
+.darkMode {
+  background-color: black;
+  color: white;
 }
 
 .subh {
@@ -120,7 +134,8 @@ a:hover {
 }
 
 footer {
-  height: 5%;
+  height: 1%;
+  margin: 1%;
   background-color: #7f344a;
   border: 2px solid #b38f00;
   padding: 0px 0px 6% 0px;
@@ -136,11 +151,6 @@ b {
   color: #7f344a;
 }
 
-@media only screen and (max-width: 600px) {
-  .card {
-    min-width: 30vw;
-  }
-}
 /*About Us Page-------------------------------*/
 .accordion-button {
   background-color: white;
@@ -150,4 +160,17 @@ b {
   width: 15%;
   height: auto;
   border: 2px solid #b38f00;
+}
+
+/*Media Queries ------------------------------------*/
+@media only screen and (max-width: 600px) {
+  .card {
+    min-width: 30vw;
+  }
+  body {
+    margin: 5% 5% 0% 5%;
+  }
+  .search {
+    margin-right: 2%;
+  }
 }/*# sourceMappingURL=style.css.map */
