--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 }
 
 .btn {
-  color: #b38f00;
+  color: #7c3d4e;
   height: 3rem;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .darkMode {
-  background-color: black;
+  background-color: #1a1a1a;
   color: white;
 }
 
@@ -77,7 +77,7 @@
   height: 100%;
   max-height: 100%;
   border: 2px solid #b38f00;
-  box-shadow: 5px 5px 5px gray;
+  box-shadow: 5px 5px 5px black;
   opacity: 0.5;
   animation: fade-in;
   animation-name: fade-in;
@@ -163,14 +163,14 @@ b {
 }
 
 /*Media Queries ------------------------------------*/
-@media only screen and (max-width: 600px) {
-  .card {
-    min-width: 30vw;
-  }
   body {
     margin: 5% 5% 0% 5%;
   }
   .search {
     margin-right: 2%;
   }
+}
+.slide-in {
+  opacity: 1 !important;
+  transform: translateX(0);
 }/*# sourceMappingURL=style.css.map */
