--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,20 +29,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  max-height: 75vh;
 }
 
 .item:not(:first-child) {
   opacity: 0;
   transition: opacity 0.5s, transform 0.5s;
-}
-
-.item__content {
-  background-color: steelblue;
-  color: #f3f3f3;
-  text-align: center;
-  padding: 7rem;
-  border-radius: 7px;
 }
 
 .item > p {
@@ -52,11 +44,6 @@ body {
 .left {
   transform-origin: left center;
   transform: translateX(-50%);
-}
-
-.right {
-  transform-origin: right center;
-  transform: translateX(50%);
 }
 
 .slide-in {
@@ -70,8 +57,9 @@ body {
 
 .card {
   margin-left: 1%;
-  max-width: 18rem;
-  max-height: 20px;
+  margin-bottom: 2%;
+  max-width: 25rem;
+  height: 75vh;
 }
 
 /*media Queries-------------------------------*/
