--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,12 @@
 }
 
 .nav {
-  margin: 5% 30% 0% 30%;
   font-size: 20px;
+  margin: 10% 30% 0% 30%;
+}
+
+#navigation {
+  padding-left: 8%;
 }
 
 .search {
@@ -134,7 +138,7 @@ a:hover {
 }
 
 footer {
-  height: 1%;
+  height: 1vh;
   margin: 1%;
   background-color: #7f344a;
   border: 2px solid #b38f00;
@@ -163,6 +167,10 @@ b {
 }
 
 /*Media Queries ------------------------------------*/
+@media only screen and (max-width: 600px) {
+  .card {
+    min-width: 18rem;
+  }
   body {
     margin: 5% 5% 0% 5%;
   }
