--- a/css/style.scss
+++ b/css/style.scss
@@ -32,12 +32,17 @@
   }
   
   .nav {
-    margin: 5% 30% 0% 30%;
     font-size: 20px;
+    margin: 10% 30% 0% 30%;
+  }
+
+  #navigation {
+    padding-left: 8%;
   }
   
 .search {
     width: 32.2rem;
+    
   }
 
 .btn {
@@ -137,7 +142,7 @@
   }
   
   footer {
-    height: 1%;
+    height: 1vh;
     margin: 1%;
     background-color: #7f344a;
     border: 2px solid #b38f00;
