--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,8 @@
 .mainh {
   background-image: url(/assets/headbk.jpg);
   border: 2px solid #b38f00;
-  padding: 40px;
+  padding: 3%;
   color: white;
-  margin: 1%;
 }
 
 .nav {
@@ -38,7 +37,7 @@
 }
 
 .search {
-  width: 32.2rem;
+  max-width: 32.2rem;
 }
 
 .btn {
@@ -138,17 +137,17 @@ a:hover {
 }
 
 footer {
-  height: 1vh;
+  max-height: 18vh;
   margin: 1%;
   background-color: #7f344a;
   border: 2px solid #b38f00;
-  padding: 0px 0px 6% 0px;
+  padding: 1% 0px 3% 2%;
 }
 
 .footerp {
+  line-height: 2vh;
   color: white;
-  margin-left: 2%;
-  line-height: 35%;
+  padding: 0px 0px 0px 0px;
 }
 
 b {
