--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,6 @@
   margin: 10% 30% 0% 30%;
 }
 
-#navigation {
-  padding-left: 8%;
-}
-
 .search {
   max-width: 32.2rem;
 }
@@ -133,21 +129,28 @@ a:hover {
 }
 
 .space {
-  height: 500px;
+  height: 500vh;
 }
 
-footer {
+.footerContainer {
   max-height: 18vh;
+  display: flex;
   margin: 1%;
   background-color: #7f344a;
   border: 2px solid #b38f00;
-  padding: 1% 0px 3% 2%;
+}
+
+.footerHeader {
+  color: white;
+  align-self: center;
+  font-size: 20px;
+  padding: 0% 0% 0% 0%;
 }
 
 .footerp {
-  line-height: 2vh;
+  line-height: 2rem;
   color: white;
-  padding: 0px 0px 0px 0px;
+  padding: 3% 1% 1% 1%;
 }
 
 b {
